--- a/src/themes/openred/global_styling/variables/_typography.scss
+++ b/src/themes/openred/global_styling/variables/_typography.scss
@@ -39,7 +39,7 @@
 }
 
 // sass-lint:disable quotes
-$ouiFontFamily: #{"'Source Sans 3', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'"} !default;
+$ouiFontFamily: #{"'Inter', 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'"} !default;
 $ouiCodeFontFamily: #{"'Source Code Pro', Consolas, Menlo, Courier, monospace"} !default;
 // sass-lint:enable quotes
 
