feature(sidenav): Restyling

--- a/src/theme_openred.scss
+++ b/src/theme_openred.scss
@@ -18,6 +18,9 @@
 // Components
 @import 'components/index';
 
+// Components
+@import 'themes/openred/components/index';
+
 // Packages
 @import '../packages/index';
 
