--- a/src/themes/openred/orui_globals.scss
+++ b/src/themes/openred/orui_globals.scss
@@ -20,3 +20,6 @@
 
 // Mixins provide generic code expansion through helpers
 @import 'global_styling/mixins/index';
+
+// Components
+@import 'components/index';
