feature(css): Dark/light division

--- a/src-docs/src/theme_openred_dark.scss
+++ b/src-docs/src/theme_openred_dark.scss
@@ -13,7 +13,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700,700i');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-@import '../../src/theme_openred';
+@import '../../src/theme_openred_dark';
 @import './components/guide_components';
 @import './services/playground/index';
 @import './views/suggest/global_filter_group';
