docs(theme): PageBackgroundColor

--- a/src/global_styling/variables/_colors.scss
+++ b/src/global_styling/variables/_colors.scss
@@ -36,7 +36,7 @@ $ouiColorDarkestShade: #343741 !default;
 $ouiColorFullShade: #000 !default;
 
 // Backgrounds
-$ouiPageBackgroundColor: tint($ouiColorLightestShade, 50%) !default;
+$ouiPageBackgroundColor: #FFFFFF !default;
 $ouiColorHighlight: #FFFCDD !default;
 
 // Every color below must be based mathematically on the set above and in a particular order.
