--- a/src/themes/openred/global_styling/variables/_colors.scss
+++ b/src/themes/openred/global_styling/variables/_colors.scss
@@ -36,7 +36,7 @@ $ouiColorDarkestShade: #2A3947 !default;
 $ouiColorFullShade: #0A1219 !default;
 
 // Backgrounds
-$ouiPageBackgroundColor: #FFF !default;
+$ouiPageBackgroundColor: #FFFFFF !default;
 $ouiColorHighlight: #FFFCDD !default;
 
 // Every color below must be based mathematically on the set above and in a particular order.
