--- a/src/themes/openred/global_styling/variables/_header.scss
+++ b/src/themes/openred/global_styling/variables/_header.scss
@@ -12,7 +12,7 @@
 // Themeable colors
 $ouiHeaderBackgroundColor: $ouiPageBackgroundColor !default;
 // Always use the dark theme value of $ouiPageBackgroundColor for the dark header background
-$ouiHeaderDarkBackgroundColor: #fff !default;
+$ouiHeaderDarkBackgroundColor: #FFF !default;
 $ouiHeaderBorderColor: $ouiBorderColor !default;
 $ouiHeaderBreadcrumbColor: $ouiColorDarkestShade !default;
 
