docs(license): Test commit to launch

--- a/src/themes/openred/components/side_nav/_side_nav_item.scss
+++ b/src/themes/openred/components/side_nav/_side_nav_item.scss
@@ -1,11 +1,11 @@
 /*!
  * SPDX-License-Identifier: Apache-2.0
  *
- * The OpenRed Contributors require contributions made to
+ * The openred Contributors require contributions made to
  * this file be licensed under the Apache-2.0 license or a
  * compatible open source license.
  *
- * Modifications Copyright OpenRed Contributors. See
+ * Modifications Copyright openred Contributors. See
  * GitHub history for details.
  */
 
